--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,8 +4,8 @@
 }
 
 .FondoCarta {
-    background-color: brown;
-    border: 3px;
+    background-color: greenyellow;
+    border: 10px;
     border-color: black;
     margin: 3;
 }
