--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,13 +4,33 @@
 }
 
 .FondoCarta {
-    background-color: greenyellow;
-    border: 10px;
-    border-color: black;
-    margin: 3;
+    position: relative;
+    background: linear-gradient(to right, rgb(38, 83, 150), rgb(11, 57, 94), rgb(29, 41, 83)); 
+    border: 4px solid black;;
+    /* margin: 1rem; */
+    width: 300px;
+    height: 400px;
+    border-radius: 10%;
 }
 
-.Imagen {
-    border: 5px;
-    size: 10px;
+.card-name {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+.ImagenPers {
+    width: 16rem;
+    border: 2px solid black;
+    border-radius: 10%;
+    margin-top: 50px;
+    
+}
+
+.BotonX {
+    position: absolute;
+    top: 5px;
+    right: 1rem;
+    width: 40px;
+    border-radius: 30%;
+    background-color: rgb(240, 74, 74);
 }
