--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,9 +2,10 @@
   display: flex;
   justify-content: center;
   /* align-items: center; */
-  padding: 10px;
+  /* padding: 10px; */
   transform: 'scale(1)';
   background: linear-gradient(to right, rgb(54, 116, 211), rgb(17, 85, 141), rgb(46, 68, 146)); 
+  height: 80px;
 }
 
 .nav-left {
@@ -21,5 +22,10 @@
 
 .nav-left button,
 .nav-right button {
-  margin-right: 10px;
+  margin-right: 20px;
+  margin-left: 20px;
+  background-color: rgb(28, 126, 165);
+  border-radius: 50%;
+  transform: scale(1.5);
+  border: 1px solid black;
 }
