--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 .App {
-   text-align: center;
+  text-align: center;
+  /* background-color: #295264; */
+  /* background-image: url("https://i.pinimg.com/564x/a6/01/22/a601222fff010236e9d629e7aa953549.jpg");
+  background-repeat: repeat; */
+
 }
