--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,7 +5,7 @@
 
 .FondoCarta {
     position: relative;
-    background: linear-gradient(to right, rgb(38, 83, 150), rgb(11, 57, 94), rgb(29, 41, 83)); 
+    background: linear-gradient(to right, #b5f46c83, #9dfc4470, #29840b7a); 
     border: 4px solid black;;
     /* margin: 1rem; */
     width: 300px;
@@ -33,4 +33,12 @@
     width: 40px;
     border-radius: 30%;
     background-color: rgb(240, 74, 74);
+    transition: background-color 0.3s ease;
+}
+
+.BotonX:hover {
+    background-color: rgb(200, 50, 50);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    transition: 10s;
+    transform: rotate(360deg);
 }
