--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,7 @@
   /* background-color: #295264; */
   /* background-image: url("https://i.pinimg.com/564x/a6/01/22/a601222fff010236e9d629e7aa953549.jpg");
   background-repeat: repeat; */
+  background: linear-gradient(to right, #74b3ce,#004346);
+  min-height: 100vh;
 
 }
