--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,44 +1,49 @@
 .Properties {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 8;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 8;
 }
 
 .FondoCarta {
-    position: relative;
-    background: linear-gradient(to right, #b5f46c83, #9dfc4470, #29840b7a); 
-    border: 4px solid black;;
-    /* margin: 1rem; */
-    width: 300px;
-    height: 400px;
-    border-radius: 10%;
+  position: relative;
+  background: linear-gradient(to right, #b5f46c83, #9dfc4470, #29840b7a);
+  border: 4px solid black;
+  /* margin: 1rem; */
+  width: 300px;
+  height: 400px;
+  border-radius: 10%;
 }
 
 .card-name {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
+  text-decoration: none;
+  color: rgb(255, 255, 255);
 }
 
 .ImagenPers {
-    width: 16rem;
-    border: 2px solid black;
-    border-radius: 10%;
-    margin-top: 50px;
-    
+  width: 16rem;
+  border: 2px solid black;
+  border-radius: 10%;
+  margin-top: 50px;
 }
 
 .BotonX {
-    position: absolute;
-    top: 5px;
-    right: 1rem;
-    width: 40px;
-    border-radius: 30%;
-    background-color: rgb(240, 74, 74);
-    transition: background-color 0.3s ease;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  width: 40px;
+  background-image: url("./X.png");
+  background-size: cover;
+  background-position: center;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .BotonX:hover {
-    background-color: rgb(200, 50, 50);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-    transition: 10s;
-    transform: rotate(360deg);
+  background-color: rgb(200, 50, 50);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  transition: 10s;
+  transform: rotate(360deg);
 }
