--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -115,9 +115,10 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url('https://images2.alphacoders.com/960/thumbbig-960714.webp') ;
+  background-image: url('./960714_1.jpg');
   background-repeat: repeat;
-  background-size: cover;
+  /* background-size: contain; */
+  background-position: bottom right;
   font-family: "Sansita Swashed", cursive;
 }
 
