--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,106 +1,72 @@
 .search {
   display: flex;
-  align-items: center;
-  margin-right: 20px;
 }
 
-label {
-  font-size: 16px;
-  margin-right: 10px;
+
+.inputSearch {
+  margin-top: 3px;
+  margin-right: 15px;
+  font-family: 'Caveat', cursive;
+  font-size: 20px;
+  flex-grow: 2;
+  height: 45px;
+  padding: 5px;
+  border: 3px solid rgb(30, 48, 80);
+  border-radius: 50px;
+}
+
+/* .search {
+  display: flex;
+  width: 110%;
+  margin-bottom: 1rem;
 }
 
 #search-input {
-  height: 100px;
-  padding: 5px; 
-  font-size: 16px; 
-}
-
-/* @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  padding: 0;
-  margin: 0;
-}
-
-.column {
-  background: #F6F792;
-  height: 100vh;
-  float: left;
-  width: 100%;
-  position: relative;
-}
-
-.two {
-  background: #F6F792;
-}
-
-.three {
-  background: #EA2E49;
-}
-
-.four {
-  background: #333745;
-}
-
-.search {
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100%;
-  text-align: center;
-  overflow: hidden;
-}
-
-.search_bar {
-  width: 280px;
-  position: relative;
-  margin: 0 auto;
-}
-
-.search_bar input[type="text"] {
-  width: 15px;
-  background: transparent;
-  transition: border .3s 0s, width .2s .3s cubic-bezier(0.225, 0.010, 0.475, 1.010), text-indent .2s .3s;
-  padding: 20px;
-  border-color: #448996;
-  text-indent: 30px;
-  outline: none;
-  border: 0px solid #448996;
-  font-size: 12px;
-  color: #A8A952;
+  flex-grow: 1;
+  height: 40px;
+  padding: 5px;
+  font-size: 16px;
+  border: 1px solid black;
   border-radius: 5px;
-  font-family: 'Nunito', sans-serif;
-}
-
-.search_bar ::-webkit-input-placeholder {
-  color: #448996;
-  font-weight: 400;
-  font-family: 'Nunito', sans-serif;
-}
-
-.search_bar ::-moz-input-placeholder {
-  color: #448996;
-  font-weight: 400;
-  font-family: 'Nunito', sans-serif;
-}
-
-.search_bar ::-o-input-placeholder {
-  color: #448996;
-  font-weight: 400;
-  font-family: 'Nunito', sans-serif;
-}
-
-.search_bar input[type="checkbox"] {
-  display: none;
-}
-
-.search_bar input[type="checkbox"]:checked + label + input {
-  width: 230px;
 } */
+
+.buttons_container {
+  display: flex;
+  gap: 1rem;
+}
+
+.Add {
+  background-image: url('./Mas.png');
+  background-size: cover;
+  background-position: center;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform (0,2);
+}
+
+.Ran {
+  background-image: url('./Shuffle_2.png');
+  background-size: cover;
+  background-position: center;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform (0,2);
+}
+
+.Add:hover,
+.Ran:hover {
+  transform: scale(1.1);
+}
+
+.Add:active,
+.Ran:active {
+  transform: scale(0.9);
+}
