--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,15 +1,15 @@
 .Cards {
   display: grid;
   /* gap: 1rem; */
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   row-gap: 40px;
-  column-gap: 40px;
+  column-gap: 10px;
   max-width: 1640px;
-  margin: 3rem;
+  margin: 10rem;
 }
-.Card {
+/* .Card {
   width: 150px;
   height: 100px;
   border-radius: 5px;
 
-}
+} */
