--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,30 +5,49 @@
 
 .FondoCarta {
   position: relative;
-  background: linear-gradient(to right, #b5f46c83, #9dfc4470, #29840b7a);
-  border: 4px solid black;
-  /* margin: 1rem; */
-  width: 300px;
-  height: 400px;
+  width: 250px;
+  height: 350px;
   border-radius: 10%;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.FondoCarta::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url(./portal-rick-and-morty.gif);
+  background-size: 210%;
+  background-position: center;
+  border: 4px solid black;
+  border-radius: 10%;
+  z-index: -1;
 }
 
 .card-name {
   text-decoration: none;
-  color: rgb(255, 255, 255);
+  /* margin-top: 50px; */
+  font-family: 'Patrick Hand', cursive;;
+  font-size: 140%;
+  color: rgb(2, 2, 2);
 }
 
 .ImagenPers {
-  width: 16rem;
-  border: 2px solid black;
-  border-radius: 10%;
-  margin-top: 50px;
+  width: 10rem;
+  border-radius: 50%;
+  margin-top: 70px;
+  box-shadow: 0 0 0 10px rgba(174, 252, 65, 0.486), 0 0 20px rgba(175, 252, 65, 0.4);
+  outline: 2px solid rgba(174, 252, 65, 0.356);
+  opacity: 0.95;
 }
 
 .BotonX {
   position: absolute;
-  top: 5px;
-  right: 10px;
+  top: 10px;
+  right: 15px;
   width: 40px;
   background-image: url("./X.png");
   background-size: cover;
@@ -42,8 +61,8 @@
 }
 
 .BotonX:hover {
-  background-color: rgb(200, 50, 50);
+  background-color: rgb(158, 41, 41);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   transition: 10s;
-  transform: rotate(360deg);
+  transform: rotate(720deg);
 }
