--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -4,7 +4,7 @@
 
 
 .inputSearch {
-  margin-top: 3px;
+  margin-top: 8px;
   margin-right: 15px;
   font-family: 'Caveat', cursive;
   font-size: 20px;
@@ -15,21 +15,6 @@
   border-radius: 50px;
 }
 
-/* .search {
-  display: flex;
-  width: 110%;
-  margin-bottom: 1rem;
-}
-
-#search-input {
-  flex-grow: 1;
-  height: 40px;
-  padding: 5px;
-  font-size: 16px;
-  border: 1px solid black;
-  border-radius: 5px;
-} */
-
 .buttons_container {
   display: flex;
   gap: 1rem;
@@ -37,10 +22,10 @@
 
 .Add {
   background-image: url('./Mas.png');
-  background-size: cover;
+  background-size: 90%;
   background-position: center;
-  height: 50px;
-  width: 50px;
+  height: 60px;
+  width: 60px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -50,10 +35,10 @@
 
 .Ran {
   background-image: url('./Shuffle_2.png');
-  background-size: cover;
+  background-size: 90%;
   background-position: center;
-  height: 50px;
-  width: 50px;
+  height: 60px;
+  width: 60px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
