--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -29,8 +29,7 @@
 
 .card-name {
   text-decoration: none;
-  /* margin-top: 50px; */
-  font-family: 'Patrick Hand', cursive;;
+  font-family: 'Patrick Hand', cursive;
   font-size: 140%;
   color: rgb(2, 2, 2);
 }
@@ -65,4 +64,40 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   transition: 10s;
   transform: rotate(720deg);
+}
+
+.BotonFav {
+  font-size: 140%;
+  position: absolute;
+  top: 10px;
+  left: 15px;
+  width: 40px;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f7a31b46;
+}
+
+.BotonFav:hover {
+  transform: scale(1.2); 
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.BotonFav:active {
+  animation: pulse 2s;
 }
