--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -15,6 +15,11 @@
   border-radius: 50px;
 }
 
+.inputSearch:hover {
+  transform: scale(1.05); 
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); 
+}
+
 .buttons_container {
   display: flex;
   gap: 1rem;
